# xaio

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  cbindgen.toml
coro/: Cargo.toml
coro/src/: future.rs  lib.rs  ptr.rs  scope.rs
coro/src/collection/: slist.rs  snode.rs
coro/src/future/: future.rs  listener.rs  mod.rs  promise.rs
coro/src/scheduler/: ex2.rs  executor.rs  mod.rs
coro/src/sync/: mod.rs
coro/src/sync/parking_lot/: context_list.rs  mod.rs
coro/src/sync/parking_spot/: context.rs  mod.rs  tagged_ptr.rs  wait_list.rs
coro/src/sys/: mod.rs  stack.rs
coro/src/sys/unix/: mod.rs  x86_64.rs
coro/src/sys/unix/asm/: x86_64_sysv_elf.S
coro/src/task/: mod.rs  task_box.rs
include/: xaio.h
libdir/: Cargo.toml
libdir/src/: lib.rs
libdir/src/sys/: mod.rs
libdir/src/sys/unix/: mod.rs
playground/: LICENSE  build.rs
playground/src/: buffer.rs  driver_iocp_windows.rs  driver_uring.rs  file.rs  lib.rs  main.rs  main_unix.rs  ready_fifo.rs  ready_list.rs  request.rs  request_list.rs  request_queue.rs  stat.rs
playground/src/capi/: driver.rs  driver_epoll_linux.rs  mod.rs
playground/src/details/: mod.rs  timer_heap.rs
playground/src/scheduler/: task.rs
playground/src/selector/: rawpoll_unix.rs
playground/src/sys/: poll.rs
playground/src/sys/unix/: event_pipe.rs  eventfd.rs  mod.rs  stat.rs
playground/src/sys/windows/: driver_windows.rs
src/: buffer.rs  driver.rs  driver_epoll.rs  driver_iocp_windows.rs  driver_none.rs  driver_uring.rs  driver_waker_eventfd.rs  driver_waker_pipe.rs  driver_waker_unix.rs  driver_waker_windows.rs  driver_windows.rs  fd_map.rs  file.rs  lib.rs  main.rs  main_unix.rs  main_windows.rs  ready_fifo.rs  ready_list.rs  request.rs  request_list.rs  request_queue.rs  ring.rs  socket.rs  status.rs  sub.rs  sub_list.rs  task.rs  utils.rs
src/capi/: driver.rs  driver_epoll_linux.rs  mod.rs  ring.rs  xaio.rs
src/details/: timer_heap.rs
src/scheduler/: executor.rs  mod.rs  task.rs
src/selector/: event.rs  interest.rs  mod.rs  poll.rs  rawpoll_unix.rs  rawpoll_windows.rs
src/sys/: mod.rs  poll.rs
src/sys/unix/: driver_linux.rs  epoll.rs  event_eventfd.rs  event_pipe.rs  iouring.rs  mod.rs
src/sys/windows/: driver_windows.rs  event.rs  iocp.rs  mod.rs
src/thread_pool/: mod.rs
ucontext/: Cargo.toml
ucontext/src/: lib.rs  stack.rs
ucontext/src/sys/: mod.rs
ucontext/src/sys/unix/: mod.rs  x86_64.rs
xaio-core/: Cargo.toml  build.rs
xaio-core/src/: completion_port.rs  completion_queue.rs  io_buf.rs  io_driver.rs  io_req.rs  io_req_fifo.rs  io_req_lifo.rs  lib.rs  op_code.rs  poll_flags.rs  socket.rs  status.rs
xaio-core/src/async/: deadline.rs  file.rs  mod.rs  socket.rs
xaio-core/src/collection/: mod.rs  slist.rs  smpsc.rs  smpsc2.rs  snode.rs
xaio-core/src/sys/: driver_poll.rs  mod.rs  poll.rs  selector.rs  selector_poll.rs  statx.rs
xaio-core/src/sys/unix/: epoll.rs  epoll_selector.rs  eventfd.rs  io_driver_linux.rs  iouring.rs  ioutils.rs  mod.rs  selector_kqueue.rs  statx_impl.rs
xaio-core/src/sys/windows/: event.rs  iocp.rs  ioutils.rs  mod.rs  statx.rs
xaio-core2/: Cargo.toml
xaio-core2/src/: completion_port.rs  driver.rs  lib.rs  ptr.rs  request.rs
xaio-core2/src/collection/: mod.rs  slist.rs  smpsc.rs  snode.rs
xaio-core2/src/driver/: dummy.rs  mod.rs
xaio-core2/src/sync/: mod.rs  smpsc.rs
xaio-core2/src/sys/: mod.rs
xaio-future/: Cargo.toml
xaio-future/src/: boxed_future.rs  lib.rs  task.rs
xaio-future/src/executor/: mod.rs
(+1 files in other folders)
