[package]
name = "xaio"
version = "0.1.0"
edition = "2021"
crate-type   = ["rlib", "cdylib", "lib"]

[dependencies]
# cbindgen = "0.27.0"
libc = "0.2.167"
enum_dispatch = "0.3.13"
bitflags = "2.6.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }

[target.'cfg(unix)'.dependencies]
nix =  { version = "0.29.0", features = ["poll", "event"]  }

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]


[build-dependencies]
bindgen = "0.65.1"

