[package]
name = "xaio"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
# https://lib.rs/crates/cargo-llvm-cov#readme-installation

[lib]
name="xaio"
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2"
enum_dispatch = "0.3.13"
bitflags = "2.6.0"
log = "0.4.22"
num = "0.4.3"
rustc-hash = "2.1.0"
socket2 = { version = "0.5.8", features = ["all"]}
cfg-if = "1.0.0"
num_cpus = "1.0"
crossbeam-deque = "0.8"
rand = "0.8"


[dev-dependencies]
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System", "Win32_System_IO", "Win32_Networking", "Win32_Networking_WinSock", "Win32_Security", "Win32_System_Threading"] }


[target.'cfg(unix)'.dependencies]
nix =  { version = "0.29.0", features = ["poll", "event"]  }

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]


[build-dependencies]
libc = "0.2"
# cc = "1.2"
cbindgen = "0.27.0"
# autocfg = "1.4"