[package]
name = "xaio-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
libc = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
num = { workspace = true }
rustc-hash = { workspace = true }
socket2 = {  workspace = true, features = ["all"]}
cfg-if = { workspace = true }
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
uring-sys2 = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System", "Win32_System_IO", "Win32_Networking", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Networking_WinSock", "Win32_Security", "Win32_System_Threading"] }
